k8s/nginx-ingress/playground.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-platform-resource
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: airqalibrate.airqo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airqo-calibrate-app-svc
                port: 
                  number: 80
    - host: platform.airqo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airqo-platform-svc
                port: 
                  number: 80
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: airqo-auth-api-svc
                port: 
                  number: 3000
          - path: /api/v2/users
            pathType: Prefix
            backend:
              service:
                name: airqo-auth-api-svc
                port: 
                  number: 3000
          - path: /api/v1/devices
            pathType: Prefix
            backend:
              service:
                name: airqo-device-registry-api-svc
                port: 
                  number: 3000
          - path: /api/v2/devices
            pathType: Prefix
            backend:
              service:
                name: airqo-device-registry-api-svc
                port: 
                  number: 3000
          - path: /api/v1/data
            pathType: Prefix
            backend:
              service:
                name: airqo-data-mgt-api-svc
                port: 
                  number: 3000
          - path: /api/v2/data
            pathType: Prefix
            backend:
              service:
                name: airqo-data-mgt-api-svc
                port: 
                  number: 3000
          - path: /api/v1/locate/map
            pathType: Prefix
            backend:
              service:
                name: airqo-locate-api-svc
                port: 
                  number: 4001
          - path: /api/v2/locate/map
            pathType: Prefix
            backend:
              service:
                name: airqo-locate-api-svc
                port: 
                  number: 4001
          - path: /api/v1/analytics
            pathType: Prefix
            backend:
              service:
                name: airqo-analytics-api-svc
                port: 
                  number: 5000
          - path: /api/v2/analytics
            pathType: Prefix
            backend:
              service:
                name: airqo-analytics-api-svc
                port: 
                  number: 5000
          - path: /api/v1/predict
            pathType: Prefix
            backend:
              service:
                name: airqo-prediction-api-svc
                port: 
                  number: 5000
          - path: /api/v2/predict
            pathType: Prefix
            backend:
              service:
                name: airqo-prediction-api-svc
                port: 
                  number: 5000
          - path: /api/v1/monitor
            pathType: Prefix
            backend:
              service:
                name: airqo-device-monitor-api-svc
                port: 
                  number: 4001
          - path: /api/v2/monitor
            pathType: Prefix
            backend:
              service:
                name: airqo-device-monitor-api-svc
                port: 
                  number: 4001
          - path: /api/v1/calibrate
            pathType: Prefix
            backend:
              service:
                name: airqo-calibrate-api-svc
                port: 
                  number: 4001
          - path: /api/v2/calibrate
            pathType: Prefix
            backend:
              service:
                name: airqo-calibrate-api-svc
                port: 
                  number: 4001
          - path: /api/v1/predict-faults
            pathType: Prefix
            backend:
              service:
                name: prod-fault-detection-api-svc
                port: 
                  number: 4001
          - path: /api/v1/incentives
            pathType: Prefix
            backend:
              service:
                name: airqo-incentives-api-svc
                port: 
                  number: 3000
          - path: /api/v2/incentives
            pathType: Prefix
            backend:
              service:
                name: airqo-incentives-api-svc
                port: 
                  number: 3000
          - path: /api/v1/datawarehouse
            pathType: Prefix
            backend:
              service:
                name: airqo-datawarehouse-api-svc
                port: 
                  number: 4001
          - path: /api/v2/datawarehouse
            pathType: Prefix
            backend:
              service:
                name: airqo-datawarehouse-api-svc
                port: 
                  number: 4001
          - path: /api/v1/notifications
            pathType: Prefix
            backend:
              service:
                name: airqo-notification-api-svc
                port: 
                  number: 8080
          - path: /api/v1/view
            pathType: Prefix
            backend:
              service:
                name: airqo-view-api-svc
                port: 
                  number: 8080
          - path: /api/v1/views
            pathType: Prefix
            backend:
              service:
                name: airqo-view-api-svc
                port: 
                  number: 8081
          - path: /api/v1/network-uptime
            pathType: Prefix
            backend:
              service:
                name: airqo-network-uptime-api-svc
                port: 
                  number: 8501
