k8s/nginx-ingress/prod-platform-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-platform-resource
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/location-snippets: |
      auth_request /auth;
      error_page 404 = @page_not_found;
      error_page 403 = @unauthorized;
      error_page 401 = @access_denied;
    nginx.ingress.kubernetes.io/server-snippet: |

      add_header Content-Type "application/json" always;

      location @page_not_found {
       return 404 '{"error": "Page Not Found"}';
      }

      location @unauthorized {
       return 403 '{"error": "Unauthorized"}';
      }

      location @access_denied {
       return 401 '{"error": "Access Denied"}';
      }
      
      location = /auth {
        if ($request_uri = "/") {
            return 200;
        }

        if ($request_uri = "/login") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/users/candidates/register)|(/api/v2/users/candidates/register)") {
            return 200;
        }

        if ($request_uri ~ "(api/v1/users/loginUser)|(api/v2/users/loginUser)") {
            return 200;
        }

        if ($request_uri ~ "(api/v1/users/forgotPassword)|(api/v2/users/forgotPassword)") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/incentives)|(/api/v2/incentives)") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/predict)|(/api/v2/predict)") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/analytics)|(/api/v2/analytics)") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/map)|(/api/v2/map)") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/data)|(/api/v2/data)") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/devices)|(/api/v2/devices)") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/users)|(/api/v2/users)") {
            return 200;
        }

        if ($request_uri ~ "(/api/v1/monitor)|(/api/v2/monitor)") {
            return 200;
        }

        internal;
        proxy_method            POST;
        proxy_pass              http://airqo-auth-api-svc.production.svc.cluster.local:3000/api/v1/users/verify?tenant=airqo;
        proxy_pass_request_body off;
        proxy_set_header        Content-Length "";
        proxy_set_header        X-Original-URI $request_uri;
      }

spec:
  rules:
    - host: platform.airqo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airqo-platform-svc
                port: 
                  number: 80
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: airqo-auth-api-svc
                port: 
                  number: 3000
          - path: /api/v2/users
            pathType: Prefix
            backend:
              service:
                name: airqo-auth-api-svc
                port: 
                  number: 3000
          - path: /api/v1/devices
            pathType: Prefix
            backend:
              service:
                name: airqo-device-registry-api-svc
                port: 
                  number: 3000
          - path: /api/v2/devices
            pathType: Prefix
            backend:
              service:
                name: airqo-device-registry-api-svc
                port: 
                  number: 3000
          - path: /api/v1/data
            pathType: Prefix
            backend:
              service:
                name: airqo-data-mgt-api-svc
                port: 
                  number: 3000
          - path: /api/v2/data
            pathType: Prefix
            backend:
              service:
                name: airqo-data-mgt-api-svc
                port: 
                  number: 3000
          - path: /api/v1/locate/map
            pathType: Prefix
            backend:
              service:
                name: airqo-locate-api-svc
                port: 
                  number: 4001
          - path: /api/v2/locate/map
            pathType: Prefix
            backend:
              service:
                name: airqo-locate-api-svc
                port: 
                  number: 4001
          - path: /api/v1/analytics
            pathType: Prefix
            backend:
              service:
                name: airqo-analytics-api-svc
                port: 
                  number: 5000
          - path: /api/v2/analytics
            pathType: Prefix
            backend:
              service:
                name: airqo-analytics-api-svc
                port: 
                  number: 5000
          - path: /api/v1/predict
            pathType: Prefix
            backend:
              service:
                name: airqo-prediction-api-svc
                port: 
                  number: 5000
          - path: /api/v2/predict
            pathType: Prefix
            backend:
              service:
                name: airqo-prediction-api-svc
                port: 
                  number: 5000
          - path: /api/v1/monitor
            pathType: Prefix
            backend:
              service:
                name: airqo-device-monitor-api-svc
                port: 
                  number: 4001
          - path: /api/v2/monitor
            pathType: Prefix
            backend:
              service:
                name: airqo-device-monitor-api-svc
                port: 
                  number: 4001
          - path: /api/v1/calibrate
            pathType: Prefix
            backend:
              service:
                name: airqo-calibrate-api-svc
                port: 
                  number: 4001
          - path: /api/v2/calibrate
            pathType: Prefix
            backend:
              service:
                name: airqo-calibrate-api-svc
                port: 
                  number: 4001
          - path: /api/v1/predict-faults
            pathType: Prefix
            backend:
              service:
                name: prod-fault-detection-api-svc
                port: 
                  number: 4001
          - path: /api/v1/incentives
            pathType: Prefix
            backend:
              service:
                name: airqo-incentives-api-svc
                port: 
                  number: 3000
          - path: /api/v2/incentives
            pathType: Prefix
            backend:
              service:
                name: airqo-incentives-api-svc
                port: 
                  number: 3000
          - path: /api/v1/datawarehouse
            pathType: Prefix
            backend:
              service:
                name: airqo-datawarehouse-api-svc
                port: 
                  number: 4001
          - path: /api/v2/datawarehouse
            pathType: Prefix
            backend:
              service:
                name: airqo-datawarehouse-api-svc
                port: 
                  number: 4001
          - path: /api/v1/notifications
            pathType: Prefix
            backend:
              service:
                name: airqo-notification-api-svc
                port: 
                  number: 8080
          - path: /api/v1/view
            pathType: Prefix
            backend:
              service:
                name: airqo-view-api-svc
                port: 
                  number: 8080
          - path: /api/v1/views
            pathType: Prefix
            backend:
              service:
                name: airqo-view-api-svc
                port: 
                  number: 8081
          - path: /api/v1/network-uptime
            pathType: Prefix
            backend:
              service:
                name: airqo-network-uptime-api-svc
                port: 
                  number: 8501
