k8s/nginx-ingress/stage-api-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage-api-ingress-resource
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:    
    - host: staging-api.airqo.net
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-auth-api-svc
                port: 
                  number: 3000
          - path: /api/v2/users
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-auth-api-svc
                port: 
                  number: 3000
          - path: /api/v1/devices
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-device-registry-api-svc
                port: 
                  number: 3000
          - path: /api/v2/devices
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-device-registry-api-svc
                port: 
                  number: 3000
          - path: /api/v1/data
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-data-mgt-api-svc
                port: 
                  number: 3000
          - path: /api/v2/data
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-data-mgt-api-svc
                port: 
                  number: 3000
          - path: /api/v1/locate/map
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-locate-api-svc
                port: 
                  number: 4001
          - path: /api/v2/locate/map
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-locate-api-svc
                port: 
                  number: 4001
          - path: /api/v1/analytics
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-analytics-api-svc
                port: 
                  number: 5000
          - path: /api/v2/analytics
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-analytics-api-svc
                port: 
                  number: 5000
          - path: /api/v1/predict
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-prediction-api-svc
                port: 
                  number: 5000
          - path: /api/v2/predict
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-prediction-api-svc
                port: 
                  number: 5000
          - path: /api/v1/monitor
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-device-monitor-api-svc
                port: 
                  number: 4001
          - path: /api/v2/monitor
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-device-monitor-api-svc
                port: 
                  number: 4001
          - path: /api/v1/calibrate
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-calibrate-api-svc
                port: 
                  number: 4001
          - path: /api/v2/calibrate
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-calibrate-api-svc
                port: 
                  number: 4001
          - path: /api/v1/predict-faults
            pathType: Prefix
            backend:
              service:
                name: stage-fault-detection-api-svc
                port: 
                  number: 4001
          - path: /api/v1/incentives
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-incentives-api-svc
                port: 
                  number: 3000
          - path: /api/v2/incentives
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-incentives-api-svc
                port: 
                  number: 3000
          - path: /api/v1/meta-data
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-meta-data-api-svc
                port: 
                  number: 4001
          - path: /api/v1/notifications
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-notification-api-svc
                port: 
                  number: 8080
          - path: /api/v1/view
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-view-api-svc
                port: 
                  number: 8080
          - path: /api/v1/views
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-view-api-svc
                port: 
                  number: 8081
          - path: /api/v1/network-uptime
            pathType: Prefix
            backend:
              service:
                name: airqo-stage-network-uptime-api-svc
                port: 
                  number: 8501
